Fix design on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@ body
 {
 	height: 100%;
 	background-color: #333;
+	font-size: 16px;
 }
 
 .border
